# perotron-web

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  astro.config.mjs  components.json  eslint.config.js  justfile  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  deploy.yml  e2e.yml  pyodide-tests.yml  release.yml  unit.yml
e2e/: error-reporting.spec.ts  navigation.spec.ts  pdf-merge.spec.ts  pdf-split.spec.ts  qr-generator.spec.ts
e2e/fixtures/: generate-pdfs.ts
e2e/helpers/: navigation.ts  posthog.ts  qr-decode.ts
public/: _redirects  robots.txt  site.webmanifest  sw.js
pyodide-tools/: .gitignore  README.md  pyproject.toml
pyodide-tools/src/pyodide_tools/: __init__.py  pdf.py
pyodide-tools/tests/: test_pdf_tools.py
scripts/: bump-version.py
src/: env.d.ts  routeTree.gen.ts  router.tsx  styles.css
src/components/: dark-mode.astro  default-catch-boundary.tsx  external-link.astro  logo.astro  pdf-thumbnail.tsx  theme-provider.tsx
src/components/react/: ad-banner.tsx  default-catch-boundary.tsx  e2e-error-trigger.tsx  (+4 more)
src/layouts/: main.astro
src/lib/: pdf-worker.ts  posthog.ts  register-sw.ts  utils.test.ts
src/pages/: 404.astro  500.astro  index.astro  privacy.astro  terms.astro
src/routes/: __root.tsx  index.tsx  merge.tsx  privacy.tsx  qr-generator.tsx  split.tsx  terms.tsx
src/store/: qr-store.ts  split-store.ts
src/styles/: global.css  typeset.css
(+32 files in other folders)
