[project]
name = "pyodide-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naveen M K", email = "naveen521kk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pypdf~=6.14.2",
]

[project.scripts]
pyodide-tools = "pyodide_tools:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
