[project]
name = "pyodide-tools"
version = "1.0.1"
description = "Pyodide-based PDF processing tools for Perotron Web"
readme = "README.md"
authors = [
    { name = "Naveen M K", email = "naveen521kk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pypdf~=6.14.2",
]

[project.scripts]
pyodide-tools = "pyodide_tools:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
addopts = "--cov=pyodide_tools --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pyodide_tools"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
